add an API to fetch the overall stat
