# docs/swagger.json
@@ -483,6 +483,32 @@
                 }
             }
         },
+        "/stat/overall": {
+            "get": {
+                "description": "get information like total market cap, volume",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "stats"
+                ],
+                "summary": "Get Overall Stats",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.StatRes"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/users/activities": {
             "get": {
                 "description": "get the activities with related to the wallet",
@@ -884,6 +910,20 @@
                 }
             }
         },
+        "types.StatRes": {
+            "type": "object",
+            "properties": {
+                "marketCap": {
+                    "type": "integer"
+                },
+                "volume": {
+                    "type": "integer"
+                },
+                "volume1d": {
+                    "type": "integer"
+                }
+            }
+        },
         "types.Statistics": {
             "type": "object",
             "properties": {
@@ -961,19 +1001,7 @@
                 "changeFloor1d": {
                     "type": "number"
                 },
-                "changeFloor30d": {
-                    "type": "number"
-                },
-                "changeFloor7d": {
-                    "type": "number"
-                },
                 "changeListed1d": {
-                    "type": "number"
-                },
-                "changeListed30d": {
-                    "type": "number"
-                },
-                "changeListed7d": {
                     "type": "number"
                 },
                 "changeVolume1d": {
@@ -991,19 +1019,7 @@
                 "floor1d": {
                     "type": "string"
                 },
-                "floor30d": {
-                    "type": "string"
-                },
-                "floor7d": {
-                    "type": "string"
-                },
                 "listed1d": {
-                    "type": "string"
-                },
-                "listed30d": {
-                    "type": "string"
-                },
-                "listed7d": {
                     "type": "string"
                 },
                 "volume1d": {
